fixed spacing under photos and removed some unneeded features from modernizr

--- a/screen.css
+++ b/screen.css
@@ -162,6 +162,7 @@ a:visited {
 
 #slideshow {
   margin: 1.667em auto;
+  padding-bottom: 1.667em;
   position: relative;
   width: 17.713em;
   height: 17.713em;
